force-app/main/default/objects/Int_Agreement_Feature__c/Int_Agreement_Feature__c.object-meta.xml
<CustomObject>
    <description>Int Agreement Feature</description>
    <label>Int Agreement Feature</label>
    <nameField>
        <displayFormat>AFI-{00000000}</displayFormat>
        <label>Agreement Feature Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements Feature</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>