force-app/main/default/objects/Int_Agreement_Feature__c/fields/Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number__c</fullName>
    <description>Agreement Number</description>
    <label>Agreement Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>