force-app/main/default/objects/Int_Agreement_Feature__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <description>Feature Name</description>
    <label>Feature Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>