force-app/main/default/objects/Int_Agreement_Feature__c/fields/Value_Numeric__c.field-meta.xml
<CustomField>
    <fullName>Value_Numeric__c</fullName>
    <description>Value Numeric</description>
    <label>Value Numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>