force-app/main/default/objects/Int_Agreement_Feature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Name__c</columns>
    <columns>Feature_Name__c</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Value_AlphaNumeric__c</columns>
    <columns>Value_DateTime__c</columns>
    <columns>Value_Numeric__c</columns>
    <columns>Committed__c</columns>
    <columns>Agreement_Source_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>